--- a/src/scss/layout/_components.scss
+++ b/src/scss/layout/_components.scss
@@ -195,9 +195,6 @@
 
 // Animated rating in the Watchlist Items (reused)
 .circular-chart_watchlist {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
     background-color: rgba($dark,0.8);
 }
 
@@ -218,6 +215,18 @@
     0% {
       stroke-dasharray: 0 100;
     }
+}
+
+// Animated rating in the Movie Detail (reused)
+
+.circular-chart_detail {
+    height: 70px;
+    width: 70px;
+    background-color: rgba($accent,0.7);
+}
+
+.circle_detail {   
+    stroke-width: 2;
 }
 
 //Pagination
@@ -290,16 +299,30 @@
         position: relative;
         margin-bottom: 15px;
     }
-    &__visual {
+    &__title {
+        font-size: 40px;
+        margin: 15px 0;
+    }
+    &__genre {
+        display: inline-flex;
+        margin: 5px;        
+        padding: 10px;
+        border-radius: 15px;
+        text-transform: lowercase;
+        background-color: rgba($accent,0.75);
+    }
+    &__content {
         position: relative;
         width: 100%;
         display: flex;
-        justify-content: space-between;        
+        justify-content: space-between;     
+        margin-top: 30px;   
     }
     &__vid {
         width: 90%;
         margin-left: 30px;
         iframe {
+            border: none;
             width: 100%;
             height: 100%;
         }
@@ -354,12 +377,31 @@
             display: flex;        
             width: 100%;
         }
+        &__loader {
+            position: absolute;
+            bottom: 8px;
+            right: 20px;
+            svg {
+                height: 18px;
+                fill: #ffffff;
+                animation: spin 2s infinite linear;
+            }
+        }
         &__label {
             align-self: flex-start;
             font-weight: 400;
             color: #ffffff;
             margin-bottom: 10px;
         }       
+    }
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
     }
 }
 
