already seen list/slider/responsive

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,7 +1,11 @@
 // ===============================================================
-// Layout Imports
+// Components Imports
 // ===============================================================
 
-@import 'components';
+@import 'alreadySeen';
 @import 'footer';
 @import 'header';
+@import 'movieDetails';
+@import 'movies';
+@import 'popular';
+@import 'watchlist';
