--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,3 +5,116 @@ $accent: #01d277;
 // FONTS
 $primary: 'Raleway', sans-serif;
 $secondary: 'Lato', sans-serif;
+
+//ANIMATIONS
+@keyframes progress {
+    0% {
+      stroke-dasharray: 0 100;
+    }
+}
+
+@keyframes opacity {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes bounceIn {
+    from,
+    20%,
+    40%,
+    60%,
+    80%,
+    to {
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+  
+    0% {
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+  
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+  
+    40% {
+        transform: scale3d(0.9, 0.9, 0.9);
+    }
+  
+    60% {
+        opacity: 1;
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+  
+    80% {
+        transform: scale3d(0.97, 0.97, 0.97);
+    }
+  
+    to {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+@keyframes pulse {
+    from {
+        transform: scale3d(1, 1, 1);
+    }
+  
+    50% {
+        transform: scale3d(1.05, 1.05, 1.05);
+    }
+  
+    to {
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+@keyframes jello {
+    from,
+    11.1%,
+    to {
+      transform: translate3d(0, 0, 0);
+    }
+  
+    22.2% {
+      transform: skewX(-12.5deg) skewY(-12.5deg);
+    }
+  
+    33.3% {
+      transform: skewX(6.25deg) skewY(6.25deg);
+    }
+  
+    44.4% {
+      transform: skewX(-3.125deg) skewY(-3.125deg);
+    }
+  
+    55.5% {
+      transform: skewX(1.5625deg) skewY(1.5625deg);
+    }
+  
+    66.6% {
+      transform: skewX(-0.78125deg) skewY(-0.78125deg);
+    }
+  
+    77.7% {
+      transform: skewX(0.390625deg) skewY(0.390625deg);
+    }
+  
+    88.8% {
+      transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+    }
+}
