--- a/src/scss/components/_movies.scss
+++ b/src/scss/components/_movies.scss
@@ -29,7 +29,27 @@
         left: 0;
         background-color: $accent;
         
-    }   
+    }  
+    &__input {
+        position: relative;
+        width: 100%; 
+        display: flex;
+        align-items: center;
+    }
+    &__btn {
+        cursor: pointer;
+        border: none;
+        background: transparent;
+        height: 22px;
+        width: 22px;
+        position: absolute;
+        z-index: 20;
+        right: 20px;
+        color: $light;
+        &:hover {
+            color: rgba($accent,0.75);
+        }
+    } 
     input {        
         z-index: 10;
         position: relative;
