--- a/src/scss/components/_movies.scss
+++ b/src/scss/components/_movies.scss
@@ -115,14 +115,15 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;        
-    margin: 15px;
+    margin: 1%;
+    width: 18%;
     cursor: pointer;
     animation: opacity 1s ease-in-out;
     &:hover {
         box-shadow: 0px 0px 20px 0px rgba($accent,0.75);  
     }
     &__pic {
-        width: 200px;
+        width: 100%;
         height: 300px;
         object-fit:cover;
     }
@@ -251,7 +252,22 @@
     box-shadow: 0px 0px 7px 0px rgba($accent,0.75);
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 992px) {
+    .movie {
+        width: 23%;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .movie {
+        width: 30%;        
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .movie {
+        width: 48%;        
+    }
     .search-box form {
         flex-wrap: wrap;
         justify-content: flex-end;
