infinite scroll for Top250, +minor refactoring

--- a/src/scss/components/_movieDetails.scss
+++ b/src/scss/components/_movieDetails.scss
@@ -100,6 +100,9 @@
     color: $light;
     height: 40px;
     width: 40px;
+    &:hover {
+        color: $accent;
+    }
 }
 
 .fromWatchlist {
@@ -107,12 +110,18 @@
     height: 40px;
     width: 40px;
     animation: bounceIn 1s linear;
+    &:hover {
+        color: $light;
+    }
 }
 
 .toSeen {
     color: $light;
     height: 40px;
     width: 40px;
+    &:hover {
+        color: $accent;
+    }
 }
 
 .fromSeen {
@@ -120,6 +129,9 @@
     height: 40px;
     width: 40px;
     animation: bounceIn 1s linear;
+    &:hover {
+        color: $light;
+    }
 }
 
 .backdrop {        
