--- a/src/scss/components/_top250.scss
+++ b/src/scss/components/_top250.scss
@@ -32,7 +32,24 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-    }    
+    } 
+    &__btns {
+        width: 100%;
+        max-width: 100px;
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        button {
+            cursor: pointer;
+            background: transparent;
+            border: none;
+            &:hover {
+                animation: pulse 1s infinite;
+            } 
+        }
+    }   
 }
 
 .topRated-item {
@@ -111,7 +128,7 @@
                 width: 100%;
             }
         }
-    }
+    }    
 }
 
 @media screen and (max-width: 830px) {
