--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,6 +11,7 @@
         justify-content: space-between;
     }
     &__logo img {
+        width: 70px;
         height: 70px;
         object-fit: contain;
     }
@@ -20,6 +21,7 @@
     width: 100%;
     max-width: 600px;
     &__list {
+        margin-left: 15px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -69,4 +71,157 @@
 .nav__item .active {
     font-weight: 600;
     color: $accent;
+}
+
+.open {
+    display: none;
+}
+
+@media screen and (max-width: 570px) {
+    .nav {
+        display: none;
+    }
+    .open{
+    background-color: rgba($accent,0.6);
+    z-index: 150;
+    position: fixed;
+    border-radius: 10px;
+	top: 20px;
+	right: 15px;
+	width: 70px;
+	height: 60px;
+	display: block;
+	cursor: pointer;
+	transition: opacity 0.2s linear;
+	span{
+		display: block;
+		float: left;
+		clear: both;
+		height: 4px;
+		width: 40px;
+		border-radius: 40px;
+		background-color: #fff;
+		position: absolute;
+		right: 3px;
+		top: 3px;
+		overflow: hidden;
+        transition: all 0.4s ease;
+        margin-right: 12px;
+		&:nth-child(1){
+			margin-top: 10px;
+			z-index: 9;
+		}
+		&:nth-child(2){
+			margin-top: 25px;
+		}
+		&:nth-child(3){
+			margin-top: 40px;
+		}
+	}
+}
+.sub-menu{
+	transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+		height: 0;
+		width: 0;
+		right: 0;
+		top: 0;
+		position: absolute;
+		background-color: rgba($accent, 0.5);
+		border-radius: 50%;
+		z-index: 18;
+		overflow: hidden;
+		li{
+			display: block;
+			float: right;
+			clear: both;
+			height: auto;
+            margin-right: -160px;
+			transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+			&:first-child{
+				margin-top: 180px;
+			}
+			&:nth-child(1){
+				transition-delay: 0.05s;
+			}
+			&:nth-child(2){
+				transition-delay: 0.10s;
+			}
+			&:nth-child(3){
+				transition-delay: 0.15s;
+			}
+			&:nth-child(4){
+				transition-delay: 0.20s;
+			}
+			&:nth-child(5){
+				transition-delay: 0.25s;
+			}
+			a {
+                position: relative;
+				font-family: $primary;
+                font-size: 16px;
+                font-weight: 400;
+                padding: 10px 10px 10px 20px;
+                text-transform: uppercase;
+                color: #fff;
+				display: block;
+				float: left;
+                line-height: 25px;
+                &:hover {
+                    font-weight: 600;
+                }
+                &::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    z-index: -1;
+                    top: 0;
+                    right: 0;
+                    width: 0%;
+                    height: 100%;
+                    border-radius: 25px 0 0 25px;
+                    background-color: rgba($dark,0.8);
+                    transition: width .4s ease-in-out;
+                }
+                &:hover::before {
+                    width: 100%;
+                }
+			}
+		}
+	}
+
+	.oppenned{
+        background: transparent;
+		.sub-menu{
+			opacity: 1;
+			height: 400px;
+            width: 400px;
+		}
+		span:nth-child(2){
+			overflow: visible;
+		}
+		span:nth-child(1), span:nth-child(3){
+			z-index: 100;
+			transform: rotate(45deg);
+		}
+		span:nth-child(1){
+			transform: rotate(45deg) translateY(12px) translateX(12px);
+		}
+		span:nth-child(2){
+			height: 420px;
+			width: 420px;
+			right: -160px;
+			top: -160px;
+			border-radius: 50%;
+			background-color: rgba($accent, 0.5);
+		}
+		span:nth-child(3){			
+			transform: rotate(-45deg) translateY(-10px) translateX(10px);
+		}
+		li{
+			margin-right: 220px;
+        }
+        &:hover .cls {
+            background-color: #ffffff;
+        }
+	}
 }
